--- a/vehicles-api/src/main/resources/application.properties
+++ b/vehicles-api/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-pricing.endpoint=http://localhost:8082
+pricing.endpoint=http://pricing-service
 maps.endpoint=http://localhost:9191
+spring.application.name=vehicle-api
+spring.h2.console.enabled=true
