--- a/vehicles-api/src/main/resources/application.properties
+++ b/vehicles-api/src/main/resources/application.properties
@@ -2,3 +2,6 @@ pricing.endpoint=http://pricing-service
 maps.endpoint=http://localhost:9191
 spring.application.name=vehicle-api
 spring.h2.console.enabled=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
